fix for bug 183890: this bug was introduced by the fix for bug 147878 that is an addition to fix for bug 138957 (the form submission deferral in JS handlers to wait for the return value.) the current patch fixes the bug so that it resets mDeferSubmission false only if we are in the NS_FORM_SUBMIT event preventig reseting in a bubling phase of a possible onclick of a submit button/image.

r= jkeiser sr= jst a= brendan